--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -89,7 +89,7 @@
             <%# //Narrow view trigger %>
 
             <%# Wide view trigger %>
-            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter('category')" aria-haspopup="true" aria-expanded="{{activeFilter === 'category'}}" aria-controls="filters-category" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white">
+            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter('category')" aria-haspopup="true" aria-expanded="{{activeFilter === 'category'}}" aria-controls="filters-category" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white" ng-class="{'is-active': activeFilter === 'category'}">
               {{ search.categories.title }}
               <span class="icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
             </button>
@@ -115,7 +115,7 @@
             <%# //Narrow view trigger %>
 
             <%# Wide view trigger %>
-            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter('retailer')" aria-haspopup="true" aria-expanded="{{activeFilter === 'retailer'}}" aria-controls="filters-retailer" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white">
+            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter('retailer')" aria-haspopup="true" aria-expanded="{{activeFilter === 'retailer'}}" aria-controls="filters-retailer" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white" ng-class="{'is-active': activeFilter === 'retailer'}">
               {{ search.retailers.title }}
               <span class="icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
             </button>
@@ -158,7 +158,7 @@
             <%# //Narrow view trigger %>
 
             <%# Wide view trigger %>
-            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter('brand')" aria-haspopup="true" aria-expanded="{{activeFilter === 'brand'}}" aria-controls="filters-brand" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white">
+            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter('brand')" aria-haspopup="true" aria-expanded="{{activeFilter === 'brand'}}" aria-controls="filters-brand" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white" ng-class="{'is-active': activeFilter === 'brand'}">
               {{ search.brands.title }}
               <span class="icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
             </button>
@@ -201,7 +201,7 @@
             <%# //Narrow view trigger %>
 
             <%# Wide view trigger %>
-            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter('colour')" aria-haspopup="true" aria-expanded="{{activeFilter === 'colour'}}" aria-controls="filters-colour" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white">
+            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter('colour')" aria-haspopup="true" aria-expanded="{{activeFilter === 'colour'}}" aria-controls="filters-colour" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white" ng-class="{'is-active': activeFilter === 'colour'}">
               {{ search.colours.title }}
               <span class="icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
             </button>
@@ -239,7 +239,7 @@
             <%# //Narrow view trigger %>
 
             <%# Wide view trigger %>
-            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter('size')" aria-haspopup="true" aria-expanded="{{activeFilter === 'size'}}" aria-controls="filters-size" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white">
+            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter('size')" aria-haspopup="true" aria-expanded="{{activeFilter === 'size'}}" aria-controls="filters-size" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white" ng-class="{'is-active': activeFilter === 'size'}">
               {{ search.sizes.title }}
               <span class="icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
             </button>
@@ -277,7 +277,7 @@
             <%# //Narrow view trigger %>
 
             <%# Wide view trigger %>
-            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter('price')" aria-haspopup="true" aria-expanded="{{activeFilter === 'price'}}" aria-controls="filters-price" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white">
+            <button type="button" ng-show="triggersVisible" ng-click="toggleFilter('price')" aria-haspopup="true" aria-expanded="{{activeFilter === 'price'}}" aria-controls="filters-price" class="filters__trigger filters__trigger--wide drop-down-menu__trigger btn btn--pointer btn--main btn--main-white" ng-class="{'is-active': activeFilter === 'price'}">
               {{ search.price.title }}
               <span class="icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
             </button>
