--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -85,7 +85,7 @@
                     <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                       <h3><%= category.name %></h3>
 
-                      <a ng-click="viewSubCategory(null)" href="#stores-t1-categories" class="btn js-disabled-hide">
+                      <a ng-click="viewSubCategory(null)" href="#stores-main-categories" class="btn js-disabled-hide">
                         <span class="hide-visually">Back to main categories</span>
                         <span class="icon icon--arrow-left-big icon--lrg" aria-hidden="true"></span>
                       </a>
