Correct href target

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -65,7 +65,7 @@
                             <span class="icon icon--arrow-right-big icon--lrg btn--pointer__icon js-disabled-hide" aria-hidden="true"></span>
                           </div>
                         <% else %>
-                          <a ng-click="viewSubCategory('<%= category.code %>')" href="#<%= category.code %>" id="<%= category.code %>" aria-haspopup="true" aria-controls="<%= category.code %>_categories" class="drop-down-menu__hdr-btn btn btn--full btn--full-left btn--pointer">
+                          <a ng-click="viewSubCategory('<%= category.code %>')" href="#<%= category.code %>_categories" id="<%= category.code %>" aria-haspopup="true" aria-controls="<%= category.code %>_categories" class="drop-down-menu__hdr-btn btn btn--full btn--full-left btn--pointer">
                             <%= category.name %>
                             <span class="hide-visually"> (view sub categories)</span>
                             <span class="icon icon--arrow-right-big icon--lrg btn--pointer__icon js-disabled-hide" aria-hidden="true"></span>
