--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -122,8 +122,8 @@
                   <span class="txt-truncate"><%= @active_category.name %></span>
                   <span class="icon icon--close-sml icon--lrg icon--flush-top" aria-hidden="true"></span>
                 </button>
-            </form>
-            <% end %><!--
+            </form><!--
+            <% end %>
 
 
             --><form id="giftCardForm" action="<%= request.path %>" method="get" class="stores-maps__filters__item">
