Dulling the disabled state

--- a/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
+++ b/app/assets/stylesheets/partials/modules/_drop-down-menu.scss
@@ -96,6 +96,7 @@
       .no-js & {border-top: 1px solid $color-grey-med-3;}
 
       /* Header text */
+      h2,
       h3 {
         display: inline;
         @include font-size($font-size-sml);
