--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -5,8 +5,6 @@
   <%# Contain 'filters', 'map/list toggle', and 'listings' %>
   <div class="js-pjax-container-stores" aria-live="polite" aria-atomic="true">
 
-    <h1 class="hide-visually">Stores</h1>
-
     <%# PJAX preloader %>
     <span class="preloader preloader--middle preloader--light">
       <span class="preloader__spinner"></span>
@@ -21,7 +19,7 @@
 
         <div class="container container--position">
 
-          <h2 class="stores-maps__filters-toggle__hdr hide-visually">Stores A-Z</h2>
+          <h1 class="stores-maps__filters-toggle__hdr hide-visually">Stores</h1>
 
           <%# Filters %>
           <div class="stores-maps__filters">
@@ -85,7 +83,7 @@
                          aria-labelledby="<%= category.code %>"
                       id="<%= category.code %>_categories" class="toggle-visibility">
                       <div class="drop-down-menu__hdr drop-down-menu__divider islet">
-                        <h3><%= category.name %></h3>
+                        <h2><%= category.name %></h2>
                         <a ng-click="viewSubCategory(null)" href="#stores-main-categories" class="btn js-disabled-hide">
                           <span class="hide-visually">Back to main categories</span>
                           <span class="icon icon--arrow-left-big icon--lrg" aria-hidden="true"></span>
