--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -20,7 +20,7 @@
 
           <%# Small screen view %>
           <a href="<%= centre_stores_path(@centre) %>" class="stores-maps__toggle stores-maps__toggle--link btn btn--main btn--main-white btn--main-compact-icon">
-            <span class="hide-visually">View stores A-Z</span>
+            <span class="hide-visually">View stores</span>
             <span class="icon icon--list icon--lrg" aria-hidden="true"></span>
           </a>
           <%# //Small screen view %>
@@ -30,7 +30,7 @@
             <span>
               <span class="icon icon--arrow-left-big" aria-hidden="true"></span>
               <span class="hide-visually">Back to </span>
-              Stores A-Z
+              Stores
             </span>
             / <%= @store.name %>
           </a>
