Adding font weight to national view header text

--- a/app/assets/stylesheets/partials/layout/_header.scss
+++ b/app/assets/stylesheets/partials/layout/_header.scss
@@ -1547,6 +1547,7 @@ $hero-banner-height-lrg: 380 !default;
 				@include respond-min($desk) {
 					@include font-size(22, 1.5);
 					font-family: $font-family-lato;
+					font-weight: 300;
 		  	}
 			}
 
