--- a/app/assets/stylesheets/partials/modules/_tile.scss
+++ b/app/assets/stylesheets/partials/modules/_tile.scss
@@ -122,7 +122,7 @@
           font-weight: bold;
         }
 
-  /* Alternative icon, tiny icon that sits top left corner of it's tile, have 2 types: 'Collections' and 'Occasions' */
+  /* Alternative icon, icon that sits top left corner of it's tile, have 2 types: 'Collections' and 'Occasions' */
   .tile__icon-alt {
     position: absolute;
     top: 0;
@@ -130,13 +130,11 @@
     background-color: rgba(#000, 0.5);
     @include to-rem(padding, 2.5 4.5);
 
-    /* Increase padding at this breakpoint */
     @include respond-min($non-palm) {
       @include to-rem(padding, 4.5 6.5);
     }
 
-      /* The icon */
-      &:before {color: #fff;}
+    &:before {color: #fff;}
   }
 
   /* Controls - 'Share' and 'Favourites' */
