--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -54,7 +54,7 @@
                               <span class="icon icon--arrow-right-big icon--lrg btn--pointer__icon js-disabled-hide" aria-hidden="true"></span>
                             </div>
                           <% else %>
-                            <a href="<%= centre_stores_category_path(@centre, category.code) %>" class="drop-down-menu__hdr-btn btn btn--full btn--full-left btn--pointer is-childless"><%= category.name %></a>
+                            <a href="<%= centre_stores_category_path(@centre, category.code) %>" class="drop-down-menu__hdr-btn btn btn--full btn--full-left btn--pointer is-childless" ng-click="saveCategory('<%= category.code %>')"><%= category.name %></a>
                           <% end %>
                         <% else %>
                           <% if filtering_gift_cards? && category.stores_accepting_gift_cards < 1 %>
@@ -98,7 +98,7 @@
                                 <span class="hide-visually"> (gift cards not available for this category)</span>
                               </div>
                             <% else %>
-                              <a href="<%= centre_stores_category_path(@centre, sub_category.code) %>" class="btn btn--full btn--full-left"><%= sub_category.name %></a>
+                              <a href="<%= centre_stores_category_path(@centre, sub_category.code) %>" class="btn btn--full btn--full-left" ng-click="saveCategory('<%= category.code %>')"><%= sub_category.name %></a>
                             <% end %>
                           </li>
                         <% end %>
