add fastclick to store category dropdown, to solve performance problems on android

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -31,7 +31,7 @@
               <div class="stores-maps__filters__item drop-down-menu drop-down-container">
 
                 <%# Drop down trigger %>
-                <button ng-click="viewSubCategory(null)" class="drop-down-menu__trigger btn btn--main btn--main-dark btn--pointer btn--pointer-padding-med js-disabled-hide" toggle-visibility="category-store-filter">
+                <button ng-click="viewSubCategory(null)" class="drop-down-menu__trigger btn btn--main btn--main-dark btn--pointer btn--pointer-padding-med js-disabled-hide js-fastclick" toggle-visibility="category-store-filter">
                   Category
                   <span class="hide-visually"> filter</span>
                   <span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span>
