put js hook on correct element

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -26,7 +26,7 @@
           <%# //Small screen view %>
 
           <%# Large screen view %>
-          <a href="<%= centre_stores_path(@centre) %>" class="stores-maps__filters-toggle__hdr txt-truncate stores-maps-back">
+          <a href="<%= centre_stores_path(@centre) %>" class="stores-maps__filters-toggle__hdr txt-truncate js-maintain-store-filter">
             <span>
               <span class="icon icon--arrow-left-big" aria-hidden="true"></span>
               <span class="hide-visually">Back to </span>
