change to not use self closing tag as its html5

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -117,7 +117,7 @@
             <% if @active_category %>
               <form action="<%= centre_stores_path(@centre) %>" method="get" class="stores-maps__filters__item">
                   <legend class="hide-visually">Clear the filtered category from the stores list</legend>
-                  <input type="hidden" name="gift_cards" value="{{gift_cards}}" />
+                  <input type="hidden" name="gift_cards" value="{{gift_cards}}">
                   <button type="submit" class="tags__btn tags__btn--solo btn">
                     <span class="txt-truncate"><%= @active_category.name %></span>
                     <span class="icon icon--close-sml icon--lrg icon--flush-top" aria-hidden="true"></span>
