--- a/app/assets/stylesheets/partials/base/_skip-link.scss
+++ b/app/assets/stylesheets/partials/base/_skip-link.scss
@@ -13,7 +13,7 @@
 		position: absolute;
 		left: 0;
 		top: 0;
-		z-index: $z-index-max;
+		z-index: $z-index-high;
 		width: 100%;
 		height: auto;
 		overflow: visible;
