--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -1,52 +1,61 @@
-<% if @centre.present? && @search.products.present? %>
-  <div ng-controller="ActiveCategoryNavController" class="section-nav container container--wide container--dark">
+<% if @centre.present? && ( @search.try( :products ).present? || @deals..present? ) %>
+  <div ng-controller="ActiveCategoryNavController" class="section-nav section-nav--<%= params[ :controller ] %> container container--wide container--dark">
 
     <%# Section nav %>
     <div class="container container--position">
 
       <div class="nav-contextual nav-contextual--dark js-nav-contextual js-viewport-check">
         <div class="nav-contextual__clip">
-          <nav class="nav-contextual__clip__inner" role="navigation" aria-label="<%= params[:controller].humanize %> categories navigation">
-            <ul class="nav-contextual__list horiz-list js-nav-contextual-list"><%=
-                render(
-                  :collection => @super_categories,
-                  :partial => 'categories/super_cat_nav',
-                  :as => :category
-                )
-              -%></ul>
+          <nav class="nav-contextual__clip__inner" role="navigation" aria-label="<%= params[:controller].singularize.humanize %> categories navigation">
+            <% if @deals.nil? %>
+              <ul class="nav-contextual__list horiz-list js-nav-contextual-list"><%=
+                  render(
+                    :collection => @super_categories,
+                    :partial => 'categories/super_cat_nav',
+                    :as => :category
+                  )
+                -%></ul>
+            <% else %>
+              <ul class="nav-contextual__list horiz-list js-nav-contextual-list"><% if @campaigns.present? %><li><%= link_to 'All Deals', centre_deals_path(@centre), 'ng-class' => "{'is-active': (activeNavigationItem == '')}", class: active_link?( params[ :campaign_code ], nil ) -%></li><% end %><%-
+                @campaigns.each do |campaign| -%><li><%= link_to campaign.name, centre_campaign_path(@centre, campaign.code), 'ng-class' => "{'is-active': (activeNavigationItem == '#{campaign.code}')}", class: active_link?( campaign.code, params[ :campaign_code ] ) -%></li><%- end -%></ul>
+            <% end %>
           </nav>
           <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--mega icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
         </div>
       </div>
 
-      <%# Show products/deals/events centre selector toggle button %>
-      <button type="button" class="btn btn--main btn--main-white btn--main-compact-icon-sml" toggle-visibility="show-products-deals-events-toggle">
-        <span class="hide-visually">Show <%= params[:controller] %> shopping centre select menu</span>
-        <span class="icon icon--ellipsis-horizontal icon--xlrg icon--flush-top" aria-hidden="true"></span>
-      </button>
-      <%# //Show products/deals/events centre selector toggle button %>
+      <% if @deals.nil? %>
+        <%# Show products/deals/events centre selector toggle button %>
+        <button type="button" class="btn btn--main btn--main-white btn--main-compact-icon-sml" toggle-visibility="show-products-deals-events-toggle">
+          <span class="hide-visually">Show <%= params[:controller] %> shopping centre select menu</span>
+          <span class="icon icon--ellipsis-horizontal icon--xlrg icon--flush-top" aria-hidden="true"></span>
+        </button>
+        <%# //Show products/deals/events centre selector toggle button %>
+      <% end %>
 
     </div>
     <%# //Section nav %>
 
-    <%# Show products/deals/events centre selector %>
-    <div class="section-nav__centre-selector container--wide toggle-visibility js-disabled-hide" id="show-products-deals-events-toggle">
-      <div class="container container--position">
-        <div class="flag flag--shrink-wrap">
-          <div class="flag__img hide-visually">
-            <label for="show-products-deals-events">Show <%= params[:controller] %> at</label>
-          </div>
-          <div class="flag__body">
-            <select class="one-whole" ng-controller="CentreSelectorController" ng-model="selectedCentre" ng-change="selectCentre()" ng-init="selectedCentre='<%= @centre.code %>'" id="show-products-deals-events">
-              <option value="<%= @centre.code %>"><%= @centre.short_name %></option>
-              <option value="<%= ([@centre] + @nearby_centres).map{|c| c.code}.join(',') %>"><%= @centre.short_name %> &amp; nearby centres</option>
-              <option value="all">All Centres</option>
-            </select>
+    <% if @deals.nil? %>
+      <%# Show products/deals/events centre selector %>
+      <div class="section-nav__centre-selector container--wide toggle-visibility js-disabled-hide" id="show-products-deals-events-toggle">
+        <div class="container container--position">
+          <div class="flag flag--shrink-wrap">
+            <div class="flag__img hide-visually">
+              <label for="show-products-deals-events">Show <%= params[:controller] %> at</label>
+            </div>
+            <div class="flag__body">
+              <select class="one-whole" ng-controller="CentreSelectorController" ng-model="selectedCentre" ng-change="selectCentre()" ng-init="selectedCentre='<%= @centre.code %>'" id="show-products-deals-events">
+                <option value="<%= @centre.code %>"><%= @centre.short_name %></option>
+                <option value="<%= ([@centre] + @nearby_centres).map{|c| c.code}.join(',') %>"><%= @centre.short_name %> &amp; nearby centres</option>
+                <option value="all">All Centres</option>
+              </select>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <%# //Show products/deals/events centre selector %>
+      <%# //Show products/deals/events centre selector %>
+    <% end %>
 
   </div>
 <%- end -%>
